details_app_prod/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: details-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - details-app.local
    secretName: details-app-tls-secret
  rules:
  - host: details-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: details-app-service
            port:
              number: 8000
